# xvigra_convolution

./: .gitignore  CMakeLists.txt  README.md  build_all.ps1  build_all.sh  build_all_linux.sh  build_all_windows.ps1  plot_benchmarks.py  plot_google_benchmark.py  run_benchmarks.ps1  run_benchmarks.py
benchmarks/: CMakeLists.txt
benchmarks/conv1d/: CMakeLists.txt  measure_access_time.cpp  measure_channels.cpp  measure_dilation.cpp  measure_input_size.cpp  measure_padding.cpp  measure_stride.cpp
benchmarks/conv2d/: CMakeLists.txt  measure_access_time.cpp  measure_channels.cpp  measure_dilation.cpp  measure_input_size.cpp  measure_padding.cpp  measure_stride.cpp
benchmarks/xtensor/: CMakeLists.txt  benchmark_normalizing.cpp  benchmark_reshape-view.cpp  benchmark_strided-view_copy_complete_X.cpp  benchmark_strided-view_copy_complete_Y.cpp  benchmark_strided-view_copy_complete_Z.cpp  benchmark_strided-view_copy_paddingStride_X.cpp  benchmark_strided-view_copy_paddingStride_Y.cpp  benchmark_strided-view_copy_paddingStride_Z.cpp  benchmark_tensor_copy_complete_X.cpp  benchmark_tensor_copy_complete_Y.cpp  benchmark_tensor_copy_complete_Z.cpp  benchmark_transpose-view.cpp  benchmark_view_copy_complete_X.cpp  benchmark_view_copy_complete_Y.cpp  benchmark_view_copy_complete_Z.cpp  benchmark_view_copy_paddingStride_X.cpp  benchmark_view_copy_paddingStride_Y.cpp  benchmark_view_copy_paddingStride_Z.cpp  benchmark_xstrided-view_copy_complete_X.cpp  benchmark_xtstrided-view_copy_paddingStride_X.cpp
benchmarks/xvigra/: CMakeLists.txt  benchmark_convolve1D_inputSize.cpp  benchmark_convolve1D_inputSize_channelFirst.cpp  benchmark_convolve1D_inputSize_channelLast.cpp  benchmark_convolve2D_inputSize_channelFirst.cpp  benchmark_convolve2D_inputSize_channelLast.cpp  benchmark_separableConvolve1D_inputSize.cpp  benchmark_separableConvolve1D_kernelSize.cpp  benchmark_separableConvolve2D_inputSize.cpp  benchmark_separableConvolve2D_kernelSize.cpp
benchmarks_result/Linux/data/: benchmark_convolve1D_inputSize.json  benchmark_convolve1D_inputSize_all-versions_opt.json  benchmark_convolve1D_inputSize_all-versions_v5.json  benchmark_convolve2D_inputSize_channelFirst.json  benchmark_convolve2D_inputSize_channelLast.json  benchmark_separableConvolve1D_inputSize.json  benchmark_separableConvolve2D_inputSize.json  benchmark_separableConvolve2D_kernelSize.json
benchmarks_result/Windows/data/: benchmark_convolve1D_inputSize.json  benchmark_convolve1D_inputSize_all-versions.json  benchmark_convolve1D_inputSize_all-versions_opt.json  benchmark_convolve1D_inputSize_all-versions_v5.json  benchmark_convolve1D_inputSize_channelFirst.json  benchmark_convolve1D_inputSize_channelLast.json  benchmark_convolve2D_inputSize_channelFirst.json  benchmark_convolve2D_inputSize_channelLast.json  benchmark_separableConvolve1D_inputSize.json  benchmark_separableConvolve1D_inputSize_all-versions_opt.json  benchmark_separableConvolve1D_kernelSize.json  benchmark_separableConvolve2D_inputSize.json
benchmarks_result/Windows_19-05/data/: conv1d_measure_access_time.json  conv1d_measure_channels.json  conv1d_measure_dilation.json  conv1d_measure_input_size.json  conv1d_measure_padding.json  conv1d_measure_stride.json  conv2d_measure_access_time.json  conv2d_measure_channels.json  conv2d_measure_dilation.json  conv2d_measure_input_size.json  conv2d_measure_padding.json  conv2d_measure_stride.json
benchmarks_result/config/: benchmark_convolve1D_inputSize.yml  benchmark_convolve1D_inputSize_all-versions.yml  benchmark_convolve1D_inputSize_all-versions_v5.yml  benchmark_convolve1D_inputSize_channelFirst.yml  benchmark_convolve1D_inputSize_channelLast.yml  benchmark_convolve2D_inputSize_channelFirst.yml  benchmark_convolve2D_inputSize_channelLast.yml  benchmark_separableConvolve1D_inputSize.yml  benchmark_separableConvolve2D_inputSize.yml  benchmark_separableConvolve2D_kernelSize.yml
benchmarks_result/config-table/xtensor/: benchmark_normalizing.yml  benchmark_reshape-view.yml  benchmark_strided-view_copy_complete.yml  benchmark_strided-view_copy_completeX.yml  benchmark_strided-view_copy_completeY.yml  benchmark_strided-view_copy_completeZ.yml  benchmark_strided-view_copy_paddingStride.yml  benchmark_strided-view_copy_paddingStrideX.yml  benchmark_strided-view_copy_paddingStrideY.yml  benchmark_strided-view_copy_paddingStrideZ.yml  (+13 more)
include/raw/: array_view_3d.hpp
include/xvigra/: convolution.hpp  convolution_util.hpp  explicit_convolution.hpp  image_io.hpp  io_util.hpp  iter_util.hpp  kernel_init.hpp  kernel_util.hpp  math.hpp  separable_convolution.hpp
include/xvigra_legacy/: explicit_convolution.hpp
py_impl/: check_explicit_convolution.py  convolution_util.py  explicit_convolution.py
py_impl/test_result_summary/: convolve1D.txt  convolve2D.txt
resources/src/: Piercing-The-Ocean.pgm  demo_gaussian_gradient_x.pgm  demo_gaussian_gradient_x.ppm  demo_gaussian_gradient_y.pgm  demo_gaussian_gradient_y.ppm  demo_gaussian_sharpening.pgm  demo_gaussian_sharpening.ppm  demo_gaussian_smoothing.pgm  demo_gaussian_smoothing.ppm  demo_small.pbm  demo_small.pgm
resources/tests/: Piercing-The-Ocean.pbm  Piercing-The-Ocean.ppm  Piercing-The-Ocean_Copy.pbm  Piercing-The-Ocean_Copy.pgm  Piercing-The-Ocean_Copy.ppm  Piercing-The-Ocean_Small.pgm
scripts/: generate_test_data.py  index_test.py  plot_all_graphs.py  plot_all_tables.py  plot_benchmark.py  plot_benchmark_file.py  plot_table.py  plot_table_file.py  run_benchmarks.py  sanitize_macros.py  util.py
src/: CMakeLists.txt  conv1d_v2.hpp  conv2d_v2.hpp  conv2d_v2.hpp.old  convolution-2d.hpp  convolution-util.hpp  demo_convolution.cpp  demo_explicit_convolution.cpp  demo_pad_input.cpp  demo_separable.cpp  demo_xexpression.cpp  explicit_convolution_demo.cpp  image-io.hpp  image_demo.cpp  image_io_demo.cpp
tests/: CMakeLists.txt  conv1d_test.cpp  conv2d_image_test.cpp  conv2d_test.cpp  main.cpp  old_image-io.hpp  test_array_view_3d.cpp  test_convolution_util.cpp  test_explicit_convolution.cpp  test_image_io.cpp  test_kernel_util.cpp  test_math.cpp  test_separable_convolution.cpp
(+214 files in other folders)
